// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MigrationTypeCheckbox Component Rendering should render in checked state 1`] = `
<div
  class="ms-Stack migrationTypeRow css-109"
  data-test="migration-type-checkbox"
>
  <div
    class="ms-Checkbox is-checked is-enabled root-119"
  >
    <input
      checked=""
      class="input-111"
      data-ktp-execute-target="true"
      id="checkbox-1"
      type="checkbox"
    />
    <label
      class="ms-Checkbox-label label-112"
      for="checkbox-1"
    >
      <div
        class="ms-Checkbox-checkbox checkbox-120"
        data-ktp-target="true"
      >
        <i
          aria-hidden="true"
          class="ms-Checkbox-checkmark checkmark-122"
          data-icon-name="CheckMark"
        >
          
        </i>
      </div>
      <span
        class="ms-Checkbox-text text-115"
      >
        Copy container in offline mode
      </span>
    </label>
  </div>
</div>
`;

exports[`MigrationTypeCheckbox Component Rendering should render with default props (unchecked state) 1`] = `
<div
  class="ms-Stack migrationTypeRow css-109"
  data-test="migration-type-checkbox"
>
  <div
    class="ms-Checkbox is-enabled root-110"
  >
    <input
      class="input-111"
      data-ktp-execute-target="true"
      id="checkbox-0"
      type="checkbox"
    />
    <label
      class="ms-Checkbox-label label-112"
      for="checkbox-0"
    >
      <div
        class="ms-Checkbox-checkbox checkbox-113"
        data-ktp-target="true"
      >
        <i
          aria-hidden="true"
          class="ms-Checkbox-checkmark checkmark-118"
          data-icon-name="CheckMark"
        >
          
        </i>
      </div>
      <span
        class="ms-Checkbox-text text-115"
      >
        Copy container in offline mode
      </span>
    </label>
  </div>
</div>
`;
